--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -1797,8 +1797,13 @@
 
 \def\msidefault#1{%
   \ifmmode
-    \string#1%
-    \def\@next{\relax}%
+    %\string#1%
+    \msitag{\msipassthru}%
+    \char`\{
+    \msiopentag{texb}{<texb enc="1" name="#1">}%
+       \msitag{<![CDATA[#1}
+    %\def\@next{\relax}%
+    \let\@next\@gobbleargs
   \else
     \def\@next{\expandafter\msidefaulta\expandafter{\string #1}}%
   \fi
@@ -1827,9 +1832,12 @@
     \ifnum\msi@inpreamble=1
        \msitopreambleextra{]]></texb>}
        \msiclosetag{texb}{}
-    \else       
-       \msitag{]]>}%
-       \msiclosetag{texb}{</texb>}%
+    \else
+         \msitag{]]>}%
+         \msiclosetag{texb}{</texb>}%
+         \ifmmode
+           \char`\} % to close off msipassthru
+         \fi
     \fi}
 
 
