Fix dot colors (Bug 2734)

--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -180,6 +180,7 @@
 \MSIUnicode{euro}{20ac}
 \MSIUnicode{texteuro}{20ac}
 \MSIUnicode{vdots}{22ee}
+\MSIUnicode{ddots}{22f1}
 \MSIUnicode{ldots}{2026}
 \MSIUnicode{dots}{2026}
 \MSIUnicode{L}{141}
@@ -555,7 +556,7 @@
 \MSIMathQuote{dcoprod}
 %\MSIMathQuote{ddagger}
 %\MSIMathQuote{ddag}
-\MSIMathQuote{ddots}
+%\MSIMathQuote{ddots}
 \MSIMathQuote{Delta}
 \MSIMathQuote{delta}
 \MSIMathQuote{det}
