--- a/filters/ptprince/ptdata/msi-tcilatex.tex
+++ b/filters/ptprince/ptdata/msi-tcilatex.tex
@@ -35,13 +35,13 @@
    \msiclosetag{QTR}{</QTR>}%
 }
 
-\def\QTP#1{%
-   \msitag{^^0a}%
-   \msihmode
-   \msiopentag{QTP}{<QTP type="#1">}% 
-   \begingroup
-   \everypar={\msiclosetag{QTP}{</QTP>}\endgroup}%
-}
+%%\def\QTP#1{%
+%%   \msitag{^^0a}%
+%%   \msihmode
+%%   \msiopentag{QTP}{<QTP type="#1">}% 
+%%   \begingroup
+%%   \everypar={\msiclosetag{QTP}{</QTP>}\endgroup}%
+%%}
 
 
 \MSIMathQuote{\FORMULA}
