Arrange for \input{tcilatex} to passthrough on tex import\export. Should help with 2646 for example

--- a/filters/ptprince/ptdata/msi-tcilatex.tex
+++ b/filters/ptprince/ptdata/msi-tcilatex.tex
@@ -1,7 +1,8 @@
 \makeatletter
 
 \@ifundefined{@TCILATEX}
-  {\gdef\@TCILATEX{\relax}}
+  {\gdef\@TCILATEX{\relax}%
+   \msitopreambleextra{<texb enc="1" name="tcilatex"><![CDATA[\input{tcilatex}]]></texb>}}
   {\endinput}
 
   
