Fix rest of 2652

--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -1421,9 +1421,11 @@
   \begingroup
     \msitag{\msipassthru}%
     \char`\{%
+    \msitag{<mspace width="thickmathspace"/>}
     \msiopentag{mtext}{<mtext>}%
     \begingroup \msihmode #1\endgroup%
     \msiclosetag{mtext}{</mtext>}%
+    \msitag{<mspace width="thickmathspace"/>}
     \char`\}
     \catcode`\$=3\relax
   \endgroup}
