Improve handling of tex button in math (eg bug 2555)

--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -106,6 +106,7 @@
 
 \MSITeXButtonReq{pagestyle}
 \MSITeXButtonReq{thispagestyle}
+\MSITeXButtonReq{intertext}
 %\MSITeXButtonReq{fbox}
 %\MSITeXButtonReq{frame}
 %\MSITeXButtonReq{TCItag}
