Changed table editing interface so you can choose cell-group or table, and depending on which, changes will apply to cells in the cell group, or will apply to all the cells in the table.

--- a/prince/base/locale/en-us/dialogs/structureproperties.dtd
+++ b/prince/base/locale/en-us/dialogs/structureproperties.dtd
@@ -12,5 +12,5 @@
 <!ENTITY sectionShortHeader.label "Short Title">
 <!ENTITY sectionShortHeader.accesskey "S">
 <!ENTITY format.label "Format">
-<!ENTITY advanced.label "Advanced">
+<!ENTITY shorttitle.label "Short Title">
 
