Fix 2385 (but see note in bug database)

--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -51,6 +51,7 @@
 \MSIEmptyElement[hspace type="italicCorrectionSpace"]{/}
 \MSIEmptyElement[hspace type="negativeThinSpace"]{!}
 \MSIEmptyElement[hspace type="noIndent"]{noindent}
+\MSIEmptyElement{qedhere}
 
 
 
@@ -99,6 +100,7 @@
 \MSITextElement[smallCaps]{textsc}
 \MSITextElement[emphasized]{emph}
 \MSITextElement{underline}
+\MSITextElement[upright]{textup}
 
 
 
@@ -164,6 +166,7 @@
 \MSIFontSwitch{Huge}
 \MSIFontSwitch{scriptsize}
 \MSIFontSwitch{footnotesize}
+
 
 
 % Counters
