--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -606,9 +606,11 @@
 \MSIMathQuote{exists}
 \MSIMathQuote{exp}
 \MSIMathQuote{fallingdotseq}
+\MSIMathQuote{fbox}
 %\MSIMathQuote{Finv}
 \MSIMathQuote{flat}
 \MSIMathQuote{forall}
+\MSIMathQuote{FORMULA}
 \MSIMathQuote{frown}
 %\MSIMathQuote{Game}
 \MSIMathQuote{Gamma}
@@ -778,6 +780,7 @@
 \MSIMathQuote{oplus}
 \MSIMathQuote{oslash}
 \MSIMathQuote{otimes}
+\MSIMathQuote{overbrace}
 \MSIMathQuote{overline}
 \MSIMathQuote{overset}
 \MSIMathQuote{overleftrightarrow}
@@ -808,6 +811,7 @@
 \MSIMathQuote{propto}
 \MSIMathQuote{Psi}
 \MSIMathQuote{psi}
+\MSIMathQuote{QABOVED} 
 \MSIMathQuote{rangle}
 \MSIMathQuote{rceil}
 \MSIMathQuote{Re}
@@ -862,7 +866,7 @@
 \MSIMathQuote{subsetneq}
 \MSIMathQuote{Subset}
 \MSIMathQuote{subset}
-\MSIMathQuote{substack}
+%\MSIMathQuote{substack}
 \MSIMathQuote{succapprox}
 \MSIMathQuote{succcurlyeq}
 \MSIMathQuote{succeq}
@@ -925,6 +929,8 @@
 \MSIMathQuote{twoheadleftarrow}
 \MSIMathQuote{twoheadrightarrow}
 \MSIMathQuote{ulcorner}
+\MSIMathQuote{underbrace}
+
 \MSIMathQuote{underset}
 \MSIMathQuote{underrightarrow}
 \MSIMathQuote{underarrow}
@@ -977,6 +983,9 @@
 \MSIMathQuote{vert}
 \MSIMathQuote{Vvdash}
 \MSIMathQuote{wedge}
+\MSIMathQuote{widehat}
+\MSIMathQuote{widetilde}
+
 \MSIMathQuote{wp}
 \MSIMathQuote{wr}
 \MSIMathQuote{Xi}
