Made sure each option in the table dialog includes a chance to say 'unspecified'

--- a/prince/base/locale/en-us/dialogs/EdInsertTable.dtd
+++ b/prince/base/locale/en-us/dialogs/EdInsertTable.dtd
@@ -55,7 +55,7 @@
 
 <!ENTITY textWrapping.label "Text wrapping">
 <!ENTITY wrapWrapping.label "Wrap">
-<!ENTITY nowrapWrapping.label "Don't wrap">
+<!ENTITY wrapNoWrapping.label "Don't wrap">
 
 <!ENTITY cellSpacing.label "Cellspacing">
 <!ENTITY cellPadding.label "Cellpadding">
@@ -259,3 +259,4 @@
 <!ENTITY rowheightRule "A row's height will be the height of its tallest cell" >
 <!ENTITY colwidthRule "A column's width will be the width of its widest cell" >
 <!ENTITY cellsizeInstructions "Use cell dimension of 0.0 to leave current dimensions unchanged" >
+<!ENTITY unspecified "--unspecified--">
