add fake packages for endnotes and multirow

--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -153,9 +153,9 @@
 % translate into XML because LaTeX does not say when to end 
 % the markup. The filter will generate <bold> ... </bold>.
 
-\MSIFontSwitch{italics}
+\MSIFontSwitch[italics]{it}
 \MSIFontSwitch[bold]{bf}
-\MSIFontSwitch{roman}
+\MSIFontSwitch[roman]{rm}
 \MSIFontSwitch{normalsize}
 \MSIFontSwitch{tiny}
 \MSIFontSwitch{small}
@@ -797,6 +797,7 @@
 \MSIMathQuote{pi}
 \MSIMathQuote{pm}
 %\MSIMathQuote{pounds}
+\MSIMathQuote{Pr}
 \MSIMathQuote{precapprox}
 \MSIMathQuote{preccurlyeq}
 \MSIMathQuote{preceq}
