--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -612,7 +612,9 @@
         \msiclosetag{shortTitle}{</shortTitle>}%
       \fi
       ##2%
-      \msiclosetag{sectiontitle}{</sectiontitle>}}%
+      \msiclosetag{sectiontitle}{</sectiontitle>}%
+     }%
+     \par
   }%
 }
 
