Bug 530 fixed. Also allows splitting up engine results that are comma-separated.

--- a/prince/base/locale/en-us/compute.properties
+++ b/prince/base/locale/en-us/compute.properties
@@ -189,7 +189,7 @@ MeanDeviation.fmt= Mean Deviation(s) %result%
 StdDeviation.fmt= Standard Deviation(s) %result%
 Variance.fmt= Variance(s) %result%
 Moment.fmt= Moments(s): %result% 
-Quantile.fmt= Quantile(s): %result% 
+Quantile.fmt= &#xA0;&#xA0;%res1%<sup>th</sup> Quantile(s): %res2% 
 #
 Passthru.fmt= <p class="msi_passthrough"> %result% </p>
 # Random number dialog
