Change the tooltip from "dh" to "eth".  We generate $\eth$ for this symbol (and it is different than \dh).  Also, was eth in V5.5.

--- a/prince/base/locale/en-us/mathmlOverlay.dtd
+++ b/prince/base/locale/en-us/mathmlOverlay.dtd
@@ -535,7 +535,7 @@
 <!ENTITY symbolsqrt.tooltip        "sqrt">
 <!ENTITY symboltop.tooltip            "top">
 <!ENTITY symbolbot.tooltip            "bot">
-<!ENTITY symboldh.tooltip     "dh">
+<!ENTITY symboldh.tooltip     "eth">
 <!ENTITY symbollambdabar.tooltip    "lambdabar">
 <!ENTITY symbolangle.tooltip          "angle">
 <!ENTITY symbolmeasuredangle.tooltip  "measuredangle">
